etapa5/y.output
Terminals unused in grammar

   TOKEN_ERROR
   '!'


State 66 conflicts: 1 shift/reduce


Grammar

    0 $accept: root $end

    1 root: program

    2 program: decl_global
    3        | decl_global program
    4        | function
    5        | function program

    6 decl_global: decl
    7            | decl_vector
    8            | decl_pointer

    9 decl: type identifier ':' init ';'

   10 init: LIT_INTEGER
   11     | LIT_FALSE
   12     | LIT_TRUE
   13     | LIT_CHAR

   14 decl_vector: type identifier '[' LIT_INTEGER ']' ':' init_vector ';'
   15            | type identifier '[' LIT_INTEGER ']' ';'

   16 init_vector: init
   17            | init init_vector

   18 decl_pointer: type '$' identifier ':' init ';'

   19 function: type identifier '(' n_param ')' command ';'

   20 n_param: /* empty */
   21        | type identifier param

   22 param: /* empty */
   23      | ',' type identifier param
   24      | ',' type '$' identifier param

   25 command: simple_command
   26        | '{' command_block '}'

   27 command_block: /* empty */
   28              | command command_block

   29 simple_command: attribution
   30               | KW_IF '(' expression ')' KW_THEN command
   31               | KW_IF '(' expression ')' KW_ELSE command KW_THEN command
   32               | KW_LOOP command '(' expression ')'
   33               | KW_INPUT identifier
   34               | KW_OUTPUT out
   35               | KW_RETURN expression

   36 attribution: identifier '=' expression
   37            | identifier '[' expression ']' '=' expression

   38 out: expression
   39    | expression ',' out

   40 type: KW_WORD
   41     | KW_BYTE
   42     | KW_BOOL

   43 expression: element
   44           | identifier '[' expression ']'
   45           | expression '+' expression
   46           | expression '-' expression
   47           | expression '/' expression
   48           | expression '*' expression
   49           | expression '<' expression
   50           | expression '>' expression
   51           | expression OPERATOR_LE expression
   52           | expression OPERATOR_GE expression
   53           | expression OPERATOR_EQ expression
   54           | expression OPERATOR_NE expression
   55           | expression OPERATOR_AND expression
   56           | expression OPERATOR_OR expression
   57           | identifier '(' n_param_ref ')'
   58           | '(' expression ')'
   59           | '&' expression
   60           | '$' expression

   61 n_param_ref: /* empty */
   62            | expression n_param_ref2

   63 n_param_ref2: /* empty */
   64             | ',' expression n_param_ref2

   65 identifier: TK_IDENTIFIER

   66 element: identifier
   67        | LIT_INTEGER
   68        | LIT_FALSE
   69        | LIT_TRUE
   70        | LIT_CHAR
   71        | LIT_STRING


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'$' (36) 18 24 60
'&' (38) 59
'(' (40) 19 30 31 32 57 58
')' (41) 19 30 31 32 57 58
'*' (42) 48
'+' (43) 45
',' (44) 23 24 39 64
'-' (45) 46
'/' (47) 47
':' (58) 9 14 18
';' (59) 9 14 15 18 19
'<' (60) 49
'=' (61) 36 37
'>' (62) 50
'[' (91) 14 15 37 44
']' (93) 14 15 37 44
'{' (123) 26
'}' (125) 26
KW_WORD (256) 40
KW_BOOL (258) 42
KW_BYTE (259) 41
KW_IF (261) 30 31
KW_THEN (262) 30 31
KW_ELSE (263) 31
KW_LOOP (264) 32
KW_INPUT (266) 33
KW_OUTPUT (267) 34
KW_RETURN (268) 35
OPERATOR_LE (270) 51
OPERATOR_GE (271) 52
OPERATOR_EQ (272) 53
OPERATOR_NE (273) 54
OPERATOR_AND (274) 55
OPERATOR_OR (275) 56
TK_IDENTIFIER (280) 65
LIT_INTEGER (281) 10 14 15 67
LIT_FALSE (283) 11 68
LIT_TRUE (284) 12 69
LIT_CHAR (285) 13 70
LIT_STRING (286) 71
TOKEN_ERROR (290)
error (291)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
root (46)
    on left: 1, on right: 0
program (47)
    on left: 2 3 4 5, on right: 1 3 5
decl_global (48)
    on left: 6 7 8, on right: 2 3
decl (49)
    on left: 9, on right: 6
init (50)
    on left: 10 11 12 13, on right: 9 16 17 18
decl_vector (51)
    on left: 14 15, on right: 7
init_vector (52)
    on left: 16 17, on right: 14 17
decl_pointer (53)
    on left: 18, on right: 8
function (54)
    on left: 19, on right: 4 5
n_param (55)
    on left: 20 21, on right: 19
param (56)
    on left: 22 23 24, on right: 21 23 24
command (57)
    on left: 25 26, on right: 19 28 30 31 32
command_block (58)
    on left: 27 28, on right: 26 28
simple_command (59)
    on left: 29 30 31 32 33 34 35, on right: 25
attribution (60)
    on left: 36 37, on right: 29
out (61)
    on left: 38 39, on right: 34 39
type (62)
    on left: 40 41 42, on right: 9 14 15 18 19 21 23 24
expression (63)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60,
    on right: 30 31 32 35 36 37 38 39 44 45 46 47 48 49 50 51 52 53
    54 55 56 58 59 60 62 64
n_param_ref (64)
    on left: 61 62, on right: 57
n_param_ref2 (65)
    on left: 63 64, on right: 62 64
identifier (66)
    on left: 65, on right: 9 14 15 18 19 21 23 24 33 36 37 44 57 66
element (67)
    on left: 66 67 68 69 70 71, on right: 43


state 0

    0 $accept: . root $end

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    root          go to state 4
    program       go to state 5
    decl_global   go to state 6
    decl          go to state 7
    decl_vector   go to state 8
    decl_pointer  go to state 9
    function      go to state 10
    type          go to state 11


state 1

   40 type: KW_WORD .

    $default  reduce using rule 40 (type)


state 2

   42 type: KW_BOOL .

    $default  reduce using rule 42 (type)


state 3

   41 type: KW_BYTE .

    $default  reduce using rule 41 (type)


state 4

    0 $accept: root . $end

    $end  shift, and go to state 12


state 5

    1 root: program .

    $default  reduce using rule 1 (root)


state 6

    2 program: decl_global .
    3        | decl_global . program

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    $default  reduce using rule 2 (program)

    program       go to state 13
    decl_global   go to state 6
    decl          go to state 7
    decl_vector   go to state 8
    decl_pointer  go to state 9
    function      go to state 10
    type          go to state 11


state 7

    6 decl_global: decl .

    $default  reduce using rule 6 (decl_global)


state 8

    7 decl_global: decl_vector .

    $default  reduce using rule 7 (decl_global)


state 9

    8 decl_global: decl_pointer .

    $default  reduce using rule 8 (decl_global)


state 10

    4 program: function .
    5        | function . program

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    $default  reduce using rule 4 (program)

    program       go to state 14
    decl_global   go to state 6
    decl          go to state 7
    decl_vector   go to state 8
    decl_pointer  go to state 9
    function      go to state 10
    type          go to state 11


state 11

    9 decl: type . identifier ':' init ';'
   14 decl_vector: type . identifier '[' LIT_INTEGER ']' ':' init_vector ';'
   15            | type . identifier '[' LIT_INTEGER ']' ';'
   18 decl_pointer: type . '$' identifier ':' init ';'
   19 function: type . identifier '(' n_param ')' command ';'

    TK_IDENTIFIER  shift, and go to state 15
    '$'            shift, and go to state 16

    identifier  go to state 17


state 12

    0 $accept: root $end .

    $default  accept


state 13

    3 program: decl_global program .

    $default  reduce using rule 3 (program)


state 14

    5 program: function program .

    $default  reduce using rule 5 (program)


state 15

   65 identifier: TK_IDENTIFIER .

    $default  reduce using rule 65 (identifier)


state 16

   18 decl_pointer: type '$' . identifier ':' init ';'

    TK_IDENTIFIER  shift, and go to state 15

    identifier  go to state 18


state 17

    9 decl: type identifier . ':' init ';'
   14 decl_vector: type identifier . '[' LIT_INTEGER ']' ':' init_vector ';'
   15            | type identifier . '[' LIT_INTEGER ']' ';'
   19 function: type identifier . '(' n_param ')' command ';'

    ':'  shift, and go to state 19
    '['  shift, and go to state 20
    '('  shift, and go to state 21


state 18

   18 decl_pointer: type '$' identifier . ':' init ';'

    ':'  shift, and go to state 22


state 19

    9 decl: type identifier ':' . init ';'

    LIT_INTEGER  shift, and go to state 23
    LIT_FALSE    shift, and go to state 24
    LIT_TRUE     shift, and go to state 25
    LIT_CHAR     shift, and go to state 26

    init  go to state 27


state 20

   14 decl_vector: type identifier '[' . LIT_INTEGER ']' ':' init_vector ';'
   15            | type identifier '[' . LIT_INTEGER ']' ';'

    LIT_INTEGER  shift, and go to state 28


state 21

   19 function: type identifier '(' . n_param ')' command ';'

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    $default  reduce using rule 20 (n_param)

    n_param  go to state 29
    type     go to state 30


state 22

   18 decl_pointer: type '$' identifier ':' . init ';'

    LIT_INTEGER  shift, and go to state 23
    LIT_FALSE    shift, and go to state 24
    LIT_TRUE     shift, and go to state 25
    LIT_CHAR     shift, and go to state 26

    init  go to state 31


state 23

   10 init: LIT_INTEGER .

    $default  reduce using rule 10 (init)


state 24

   11 init: LIT_FALSE .

    $default  reduce using rule 11 (init)


state 25

   12 init: LIT_TRUE .

    $default  reduce using rule 12 (init)


state 26

   13 init: LIT_CHAR .

    $default  reduce using rule 13 (init)


state 27

    9 decl: type identifier ':' init . ';'

    ';'  shift, and go to state 32


state 28

   14 decl_vector: type identifier '[' LIT_INTEGER . ']' ':' init_vector ';'
   15            | type identifier '[' LIT_INTEGER . ']' ';'

    ']'  shift, and go to state 33


state 29

   19 function: type identifier '(' n_param . ')' command ';'

    ')'  shift, and go to state 34


state 30

   21 n_param: type . identifier param

    TK_IDENTIFIER  shift, and go to state 15

    identifier  go to state 35


state 31

   18 decl_pointer: type '$' identifier ':' init . ';'

    ';'  shift, and go to state 36


state 32

    9 decl: type identifier ':' init ';' .

    $default  reduce using rule 9 (decl)


state 33

   14 decl_vector: type identifier '[' LIT_INTEGER ']' . ':' init_vector ';'
   15            | type identifier '[' LIT_INTEGER ']' . ';'

    ':'  shift, and go to state 37
    ';'  shift, and go to state 38


state 34

   19 function: type identifier '(' n_param ')' . command ';'

    KW_IF          shift, and go to state 39
    KW_LOOP        shift, and go to state 40
    KW_INPUT       shift, and go to state 41
    KW_OUTPUT      shift, and go to state 42
    KW_RETURN      shift, and go to state 43
    TK_IDENTIFIER  shift, and go to state 15
    '{'            shift, and go to state 44

    command         go to state 45
    simple_command  go to state 46
    attribution     go to state 47
    identifier      go to state 48


state 35

   21 n_param: type identifier . param

    ','  shift, and go to state 49

    $default  reduce using rule 22 (param)

    param  go to state 50


state 36

   18 decl_pointer: type '$' identifier ':' init ';' .

    $default  reduce using rule 18 (decl_pointer)


state 37

   14 decl_vector: type identifier '[' LIT_INTEGER ']' ':' . init_vector ';'

    LIT_INTEGER  shift, and go to state 23
    LIT_FALSE    shift, and go to state 24
    LIT_TRUE     shift, and go to state 25
    LIT_CHAR     shift, and go to state 26

    init         go to state 51
    init_vector  go to state 52


state 38

   15 decl_vector: type identifier '[' LIT_INTEGER ']' ';' .

    $default  reduce using rule 15 (decl_vector)


state 39

   30 simple_command: KW_IF . '(' expression ')' KW_THEN command
   31               | KW_IF . '(' expression ')' KW_ELSE command KW_THEN command

    '('  shift, and go to state 53


state 40

   32 simple_command: KW_LOOP . command '(' expression ')'

    KW_IF          shift, and go to state 39
    KW_LOOP        shift, and go to state 40
    KW_INPUT       shift, and go to state 41
    KW_OUTPUT      shift, and go to state 42
    KW_RETURN      shift, and go to state 43
    TK_IDENTIFIER  shift, and go to state 15
    '{'            shift, and go to state 44

    command         go to state 54
    simple_command  go to state 46
    attribution     go to state 47
    identifier      go to state 48


state 41

   33 simple_command: KW_INPUT . identifier

    TK_IDENTIFIER  shift, and go to state 15

    identifier  go to state 55


state 42

   34 simple_command: KW_OUTPUT . out

    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEGER    shift, and go to state 56
    LIT_FALSE      shift, and go to state 57
    LIT_TRUE       shift, and go to state 58
    LIT_CHAR       shift, and go to state 59
    LIT_STRING     shift, and go to state 60
    '&'            shift, and go to state 61
    '$'            shift, and go to state 62
    '('            shift, and go to state 63

    out         go to state 64
    expression  go to state 65
    identifier  go to state 66
    element     go to state 67


state 43

   35 simple_command: KW_RETURN . expression

    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEGER    shift, and go to state 56
    LIT_FALSE      shift, and go to state 57
    LIT_TRUE       shift, and go to state 58
    LIT_CHAR       shift, and go to state 59
    LIT_STRING     shift, and go to state 60
    '&'            shift, and go to state 61
    '$'            shift, and go to state 62
    '('            shift, and go to state 63

    expression  go to state 68
    identifier  go to state 66
    element     go to state 67


state 44

   26 command: '{' . command_block '}'

    KW_IF          shift, and go to state 39
    KW_LOOP        shift, and go to state 40
    KW_INPUT       shift, and go to state 41
    KW_OUTPUT      shift, and go to state 42
    KW_RETURN      shift, and go to state 43
    TK_IDENTIFIER  shift, and go to state 15
    '{'            shift, and go to state 44

    $default  reduce using rule 27 (command_block)

    command         go to state 69
    command_block   go to state 70
    simple_command  go to state 46
    attribution     go to state 47
    identifier      go to state 48


state 45

   19 function: type identifier '(' n_param ')' command . ';'

    ';'  shift, and go to state 71


state 46

   25 command: simple_command .

    $default  reduce using rule 25 (command)


state 47

   29 simple_command: attribution .

    $default  reduce using rule 29 (simple_command)


state 48

   36 attribution: identifier . '=' expression
   37            | identifier . '[' expression ']' '=' expression

    '['  shift, and go to state 72
    '='  shift, and go to state 73


state 49

   23 param: ',' . type identifier param
   24      | ',' . type '$' identifier param

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    type  go to state 74


state 50

   21 n_param: type identifier param .

    $default  reduce using rule 21 (n_param)


state 51

   16 init_vector: init .
   17            | init . init_vector

    LIT_INTEGER  shift, and go to state 23
    LIT_FALSE    shift, and go to state 24
    LIT_TRUE     shift, and go to state 25
    LIT_CHAR     shift, and go to state 26

    $default  reduce using rule 16 (init_vector)

    init         go to state 51
    init_vector  go to state 75


state 52

   14 decl_vector: type identifier '[' LIT_INTEGER ']' ':' init_vector . ';'

    ';'  shift, and go to state 76


state 53

   30 simple_command: KW_IF '(' . expression ')' KW_THEN command
   31               | KW_IF '(' . expression ')' KW_ELSE command KW_THEN command

    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEGER    shift, and go to state 56
    LIT_FALSE      shift, and go to state 57
    LIT_TRUE       shift, and go to state 58
    LIT_CHAR       shift, and go to state 59
    LIT_STRING     shift, and go to state 60
    '&'            shift, and go to state 61
    '$'            shift, and go to state 62
    '('            shift, and go to state 63

    expression  go to state 77
    identifier  go to state 66
    element     go to state 67


state 54

   32 simple_command: KW_LOOP command . '(' expression ')'

    '('  shift, and go to state 78


state 55

   33 simple_command: KW_INPUT identifier .

    $default  reduce using rule 33 (simple_command)


state 56

   67 element: LIT_INTEGER .

    $default  reduce using rule 67 (element)


state 57

   68 element: LIT_FALSE .

    $default  reduce using rule 68 (element)


state 58

   69 element: LIT_TRUE .

    $default  reduce using rule 69 (element)


state 59

   70 element: LIT_CHAR .

    $default  reduce using rule 70 (element)


state 60

   71 element: LIT_STRING .

    $default  reduce using rule 71 (element)


state 61

   59 expression: '&' . expression

    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEGER    shift, and go to state 56
    LIT_FALSE      shift, and go to state 57
    LIT_TRUE       shift, and go to state 58
    LIT_CHAR       shift, and go to state 59
    LIT_STRING     shift, and go to state 60
    '&'            shift, and go to state 61
    '$'            shift, and go to state 62
    '('            shift, and go to state 63

    expression  go to state 79
    identifier  go to state 66
    element     go to state 67


state 62

   60 expression: '$' . expression

    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEGER    shift, and go to state 56
    LIT_FALSE      shift, and go to state 57
    LIT_TRUE       shift, and go to state 58
    LIT_CHAR       shift, and go to state 59
    LIT_STRING     shift, and go to state 60
    '&'            shift, and go to state 61
    '$'            shift, and go to state 62
    '('            shift, and go to state 63

    expression  go to state 80
    identifier  go to state 66
    element     go to state 67


state 63

   58 expression: '(' . expression ')'

    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEGER    shift, and go to state 56
    LIT_FALSE      shift, and go to state 57
    LIT_TRUE       shift, and go to state 58
    LIT_CHAR       shift, and go to state 59
    LIT_STRING     shift, and go to state 60
    '&'            shift, and go to state 61
    '$'            shift, and go to state 62
    '('            shift, and go to state 63

    expression  go to state 81
    identifier  go to state 66
    element     go to state 67


state 64

   34 simple_command: KW_OUTPUT out .

    $default  reduce using rule 34 (simple_command)


state 65

   38 out: expression .
   39    | expression . ',' out
   45 expression: expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '/' expression
   48           | expression . '*' expression
   49           | expression . '<' expression
   50           | expression . '>' expression
   51           | expression . OPERATOR_LE expression
   52           | expression . OPERATOR_GE expression
   53           | expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_NE expression
   55           | expression . OPERATOR_AND expression
   56           | expression . OPERATOR_OR expression

    OPERATOR_LE   shift, and go to state 82
    OPERATOR_GE   shift, and go to state 83
    OPERATOR_EQ   shift, and go to state 84
    OPERATOR_NE   shift, and go to state 85
    OPERATOR_AND  shift, and go to state 86
    OPERATOR_OR   shift, and go to state 87
    '<'           shift, and go to state 88
    '>'           shift, and go to state 89
    '+'           shift, and go to state 90
    '-'           shift, and go to state 91
    '*'           shift, and go to state 92
    '/'           shift, and go to state 93
    ','           shift, and go to state 94

    $default  reduce using rule 38 (out)


state 66

   44 expression: identifier . '[' expression ']'
   57           | identifier . '(' n_param_ref ')'
   66 element: identifier .

    '['  shift, and go to state 95
    '('  shift, and go to state 96

    '('       [reduce using rule 66 (element)]
    $default  reduce using rule 66 (element)


state 67

   43 expression: element .

    $default  reduce using rule 43 (expression)


state 68

   35 simple_command: KW_RETURN expression .
   45 expression: expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '/' expression
   48           | expression . '*' expression
   49           | expression . '<' expression
   50           | expression . '>' expression
   51           | expression . OPERATOR_LE expression
   52           | expression . OPERATOR_GE expression
   53           | expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_NE expression
   55           | expression . OPERATOR_AND expression
   56           | expression . OPERATOR_OR expression

    OPERATOR_LE   shift, and go to state 82
    OPERATOR_GE   shift, and go to state 83
    OPERATOR_EQ   shift, and go to state 84
    OPERATOR_NE   shift, and go to state 85
    OPERATOR_AND  shift, and go to state 86
    OPERATOR_OR   shift, and go to state 87
    '<'           shift, and go to state 88
    '>'           shift, and go to state 89
    '+'           shift, and go to state 90
    '-'           shift, and go to state 91
    '*'           shift, and go to state 92
    '/'           shift, and go to state 93

    $default  reduce using rule 35 (simple_command)


state 69

   28 command_block: command . command_block

    KW_IF          shift, and go to state 39
    KW_LOOP        shift, and go to state 40
    KW_INPUT       shift, and go to state 41
    KW_OUTPUT      shift, and go to state 42
    KW_RETURN      shift, and go to state 43
    TK_IDENTIFIER  shift, and go to state 15
    '{'            shift, and go to state 44

    $default  reduce using rule 27 (command_block)

    command         go to state 69
    command_block   go to state 97
    simple_command  go to state 46
    attribution     go to state 47
    identifier      go to state 48


state 70

   26 command: '{' command_block . '}'

    '}'  shift, and go to state 98


state 71

   19 function: type identifier '(' n_param ')' command ';' .

    $default  reduce using rule 19 (function)


state 72

   37 attribution: identifier '[' . expression ']' '=' expression

    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEGER    shift, and go to state 56
    LIT_FALSE      shift, and go to state 57
    LIT_TRUE       shift, and go to state 58
    LIT_CHAR       shift, and go to state 59
    LIT_STRING     shift, and go to state 60
    '&'            shift, and go to state 61
    '$'            shift, and go to state 62
    '('            shift, and go to state 63

    expression  go to state 99
    identifier  go to state 66
    element     go to state 67


state 73

   36 attribution: identifier '=' . expression

    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEGER    shift, and go to state 56
    LIT_FALSE      shift, and go to state 57
    LIT_TRUE       shift, and go to state 58
    LIT_CHAR       shift, and go to state 59
    LIT_STRING     shift, and go to state 60
    '&'            shift, and go to state 61
    '$'            shift, and go to state 62
    '('            shift, and go to state 63

    expression  go to state 100
    identifier  go to state 66
    element     go to state 67


state 74

   23 param: ',' type . identifier param
   24      | ',' type . '$' identifier param

    TK_IDENTIFIER  shift, and go to state 15
    '$'            shift, and go to state 101

    identifier  go to state 102


state 75

   17 init_vector: init init_vector .

    $default  reduce using rule 17 (init_vector)


state 76

   14 decl_vector: type identifier '[' LIT_INTEGER ']' ':' init_vector ';' .

    $default  reduce using rule 14 (decl_vector)


state 77

   30 simple_command: KW_IF '(' expression . ')' KW_THEN command
   31               | KW_IF '(' expression . ')' KW_ELSE command KW_THEN command
   45 expression: expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '/' expression
   48           | expression . '*' expression
   49           | expression . '<' expression
   50           | expression . '>' expression
   51           | expression . OPERATOR_LE expression
   52           | expression . OPERATOR_GE expression
   53           | expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_NE expression
   55           | expression . OPERATOR_AND expression
   56           | expression . OPERATOR_OR expression
